<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/confirm_pickup_layout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/colorPrimary"
          android:layout_gravity="center_horizontal"
       android:text="@string/confirm_pickup_spot"
          android:textSize="@dimen/_18sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_address_pickup"
            android:layout_gravity="left"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/address_demo"
            android:textSize="@dimen/_16sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"

        android:paddingTop="@dimen/_8sdp"
    android:clickable="true"
        android:paddingBottom="@dimen/_8sdp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm_pickup"
            android:background="@drawable/rounded"
            android:text="@string/confirm_uber"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>